# include-shader

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
src/: dependency_graph.rs  lib.rs
tests/: tests.rs
tests/shaders/: includes.glsl  no_include.glsl
tests/shaders/functions/: luminance.glsl  rand.glsl
