[package]
name = "include-shader"
version = "0.2.0"
license= "MIT OR Apache-2.0"
description = "A macro for including shader files as string with dependencies support."
keywords = ["include", "assets", "shader", "glsl", "hlsl"]
categories = ["development-tools", "game-development", "graphics", "web-programming"]
repository = "https://github.com/adrienblanchard/include-shader"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
regex = "1"
lazy_static = "1.4.0"

[features]
nightly = ["track-path"] # deprecated as of v0.2.0 in favor of standalone features
relative-path = []
track-path = []